--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Pavlo Korolov",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.2",
