--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "author": "Pavlo Korolov",
   "license": "MIT",
   "devDependencies": {
+    "@types/imap": "^0.8.37",
     "@types/node": "^20.4.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "http": "^0.0.1-security"
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "imap": "^0.8.19",
+    "mailparser": "^3.6.5"
   }
 }
